<resources>
    <string name="app_name">Colors of Istria</string>
    <string name="umag">Umag</string>
    <string name="umago">Umago</string>
    <string name="brtonigla">Brtonigla</string>
    <string name="verteneglio">Verteneglio</string>
    <string name="novigrad">Novigrad</string>
    <string name="cittanova">Cittanova</string>
    <string name="buje">Buje</string>
    <string name="about_region">About region</string>
    <string name="the_best_of_city">The best of City</string>
    <string name="brtonigla_san_rocco">San Rocco hotel and restaurant</string>
    <string name="brtonigla_san_rocco_description">Nothing what I can afford</string>
    <string name="brtonigla_skarline">Skarline Nature Park</string>
    <string name="brtonigla_skarline_description">Natural water spring with beatiful nature</string>
    <string name="brtonigla_caffe_comunita">Caffè Bar \"Comunità\"</string>
    <string name="brtonigla_caffe_comunita_description">Local italian bar with pool</string>
    <string name="brtonigla_primizia"><![CDATA[Primizia food & wine]]></string>
    <string name="brtonigla_primizia_description">Good restaurant with good pizza for common price</string>
    <string name="umag_amici">Bar Buoni Amici</string>
    <string name="umag_amici_description">Great bar with great music</string>
    <string name="umag_town_center">Center of city</string>
    <string name="umag_town_center_description">City center with tower and old tight streets</string>
    <string name="umag_muzej_grada">Muzej grada Umag</string>
    <string name="umag_muzej_grada_description">Museum of city Umag</string>
    <string name="umag_americano">American Bar</string>
    <string name="umag_americano_description">Local bar with great music, locals and nice atmosphere</string>
    <string name="umag_main_square">Main square of Umag</string>
    <string name="umag_main_square_description">Here you can find infopoint and shops</string>
    <string name="brtonigla_church">Church and main square</string>
    <string name="brtonigla_church_description">Here you can find basic services and historical church</string>
    <string name="novigrad_church">Novigrad church</string>
    <string name="novigrad_church_description">Inside you can find also musem and crypt, but wear long trousers and shirts</string>
    <string name="novigrad_murmaid">Statue of murmaid</string>
    <string name="novigrad_murmaid_description">Around statue you can find old town walls and restaurants</string>
    <string name="novigrad_pool">Public pool</string>
    <string name="novigrad_pool_description">Local public pool with salty water</string>
    <string name="buje_caffe">Caffe on main square</string>
    <string name="buje_caffe_description">Just bar next to the library</string>
    <string name="buje_church">Church in Buje</string>
    <string name="buje_church_description">Really nice church</string>
    <string name="buje_konzum">Local shop Konzum</string>
    <string name="buje_konzum_description">Ordinary shop where you can find stuff for every day life</string>
    <string name="buje_main_square">Main square of Buje</string>
    <string name="buje_main_square_description">Old town of Buje</string>
    <string name="recent_events">Recent Events</string>
    <string name="services_of_city">Services in city</string>
    <string name="dateOfEvent">4. 12.</string>
    <string name="NameOfObject">Object</string>
    <string name="objectDescription">Object description</string>
    <string name="tabLayout_city_info">City Info</string>
    <string name="city_info">City info</string>
    <string name="tabLayout_city_events">Events</string>
    <string name="tabLayout_city_services">Services</string>
</resources>
