<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.svobodapeter.colorsofistria.CitiesMainActivity">

    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/city_umag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_top_bottom"
            android:layout_marginTop="@dimen/margin_top_bottom"
            android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CityHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/umag" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/umago"
                    android:textColor="@color/blue" />
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="@dimen/margin_top_bottom"
            android:background="@color/blue" />

        <FrameLayout
            android:id="@+id/city_brtonigla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_top_bottom"
            android:layout_marginTop="@dimen/margin_top_bottom"
            android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CityHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brtonigla" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verteneglio"
                    android:textColor="@color/orange" />
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="@dimen/margin_top_bottom"
            android:background="@color/orange" />

        <FrameLayout
            android:id="@+id/city_novigrad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_top_bottom"
            android:layout_marginTop="@dimen/margin_top_bottom"
            android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CityHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novigrad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cittanova"
                    android:textColor="@color/green" />
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="@dimen/margin_top_bottom"
            android:background="@color/green" />

        <FrameLayout
            android:id="@+id/city_buje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_top_bottom"
            android:layout_marginTop="@dimen/margin_top_bottom"
            android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CityHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buje" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buje"
                    android:textColor="@color/pink" />
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="@dimen/margin_top_bottom"
            android:background="@color/pink" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/main_menu"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:foregroundGravity="center_horizontal" />

    <ImageView
        android:id="@+id/olive"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitEnd"
        android:src="@drawable/olive" />

</RelativeLayout>
